--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -5,6 +5,135 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Dependencies\n",
+    "import os\n",
+    "from bs4 import BeautifulSoup as bs\n",
+    "import requests\n",
+    "from splinter import Browser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# URL of page to be scraped\n",
+    "url = 'https://mars.nasa.gov/news/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Retrieve page with the requests module\n",
+    "response = requests.get(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create BeautifulSoup object; parse with 'html.parser'\n",
+    "soup = bs(response.text, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " # Examine the results, then determine element that contains sought info\n",
+    "print(soup.prettify())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " # Print all paragraph texts\n",
+    "titles = soup.find_all('div', class_='content_title')\n",
+    "for article_title in titles:\n",
+    "    print(article_title.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# find the latest title and paragraph then store in variables\n",
+    "\n",
+    "news_title = soup.find(\"div\", class_=\"content_title\").text\n",
+    "news_p = soup.find(\"div\", class_=\"rollover_description_inner\").text\n",
+    "\n",
+    "print(f\"Title: {news_title}\")\n",
+    "print(f\"Paragraph: {news_p}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set the directory where chromedriver exists\n",
+    "executable_path = {'executable_path':'C:/bin/chromedriver.exe'} \n",
+    "browser = Browser('chrome', **executable_path, headless=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visit JPL Mars Space Images for JPL Featured Space Image\n",
+    "url_image = \"https://www.jpl.nasa.gov/spaceimages/?search=&category=Mars\"\n",
+    "Browser.visit(url_image)\n",
+    "#Browser.click_link_by_partial_text('full_image')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "html = browser.html\n",
+    "soup = bs(html, \"html.parser\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_html = browser.html\n",
+    "new_soup = bs(new_html, 'html.parser')\n",
+    "temp_img_url = new_soup.find('img', class_='fancybox_image')\n",
+    "back_half_img_url = temp_img_url.get('src')\n",
+    "\n",
+    "featured_mars_image_url = \"https://www.jpl.nasa.gov\" + back_half_img_url\n",
+    "\n",
+    "print(featured_mars_image_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
